--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "axios": "^0.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "css-loader": "^1.0.0",
+    "material-icons": "^0.2.3",
+    "resolve-url-loader": "^3.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
     "vue-loader": "14.2.2",
     "vue-router": "^3.0.1",
     "vue-style-loader": "^4.1.2",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "vuesax": "^3.5.6"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
