--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "css-loader": "^1.0.0",
     "material-icons": "^0.2.3",
     "resolve-url-loader": "^3.0.0",
+    "ress": "^1.2.2",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.17",
